--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <body>
         <header>
             <div class="header-content">
-                <img src="Benil.jpeg" alt="Your Profile Picture" class="Profile-picture">
+                <img src="Benil.jpg" alt="Your Profile Picture" class="Profile-picture">
                 <h1>Benil</h1>
                 <p>Passionate on teaching</p>
             </div>
